--- a/src/main/resources/com/properties/messages_en.properties
+++ b/src/main/resources/com/properties/messages_en.properties
@@ -926,3 +926,9 @@ title.configuracion=Configuracion
 field.maximoparticipantes=Total de participantes
 field.maximopremios=Cantidad de premios
 menu.configuracion=Configuracion
+title.iniciar=Iniciar
+button.jugar=Jugar
+field.iniciado=Iniciado
+menu.iniciar=Iniciar
+title.ganadores=Ganadores
+button.start=Iniciar
