--- a/src/main/resources/com/properties/messages.properties
+++ b/src/main/resources/com/properties/messages.properties
@@ -347,7 +347,7 @@ field.titulo=Titulo
 button.generate=Generar
 info.generated=Generaci\u00f3n automatica finalizo
 field.idagente=Cedula
-menubar.home=Inicio
+menubar.home=Jugar
 button.vacaciones=Vacaciones
 button.permiso=Permiso
 titleview.backup=Backup
@@ -923,8 +923,8 @@ menu.solicitudconviajesinasignar=Solicitud sin viajes
 menu.new=New
 menu.view=View
 title.configuracion=Configuracion
-field.maximoparticipantes=Total de participantes
-field.maximopremios=Cantidad de premios
+field.maximoparticipantes=No.participantes
+field.maximopremios=No.de premios
 menu.configuracion=Configuracion
 title.iniciar=Iniciar
 button.jugar=Jugar
@@ -932,3 +932,14 @@ field.iniciado=Iniciado
 menu.iniciar=Iniciar
 title.ganadores=Ganadores
 button.start=Iniciar
+field.disponibles=Disponibles
+field.pendientes=Pendientes
+field.debeiniciarprimero=Revise configuracion y seleccione Iniciar
+button.iniciar=Iniciar
+field.jugar=Jugar
+button.irainiciar=Ir a iniciar
+title.cambiarpremios=Cambiar premios
+menu.cambiarpremios=Cambiar premios
+field.valorminimo=minimo
+title.cambiarparticipantes=Cambiar participantes
+menu.cambiarparticipantes=Cambiar participantes
