--- a/src/main/resources/com/properties/messages_es.properties
+++ b/src/main/resources/com/properties/messages_es.properties
@@ -942,3 +942,6 @@ menu.cambiarpremios=Cambiar premios
 field.valorminimo=minimo
 title.cambiarparticipantes=Cambiar participantes
 menu.cambiarparticipantes=Cambiar participantes
+field.mensajealiniciar=Al iniciar se limpiaran los ganadores y toda la informacion 
+field.mensajeconfiguracion=Despues de configurar dirigase a la pagina Iniciar
+field.mensajeconfiguracionayuda=Cuando este jugando y necesite cambiar algo utilice las opciones de cambio de Premios/Participantes
